--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -388,3 +388,15 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91997/3359939e_7c20_43c5_9fcd_f6af8220003a.jpg
   link: https://www.secretescapes.se/elegant-hotell-paa-norra-sardinien-colonna-grand-hotel-capo-testa-santa-teresa-gallura-sardinien-italien/sale
   domestic: false
+
+- title: Femstjärnig vistelse i vackra San Gemini
+  id: femstjärnig-vistelse-i-vackra-san-gemini
+  location: San Gemini Palace, San Gemini, Italien
+  description: Njut av mat och dryck i en mysig stad i Umbrien, inkl. frukost
+  price: 3140
+  price-description: per svit per natt
+  saved: 47
+  expires: 2019/04/16
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/90484/1ed97f1f_ed7b_4f29_aa12_ff6538b5ac46.jpg
+  link: https://www.secretescapes.se/njut-av-mat-och-dryck-i-vackra-san-gemini-san-gemini-palace-san-gemini-italien/sale
+  domestic: false
